<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/row1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/keyboard_key_style"
        android:text="@string/ahButtonLabel" />

    <TextView
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/keyboard_key_style"
        android:text="@string/aehButtonLabel" />

    <TextView
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/keyboard_key_style"
        android:text="ඇ" />

    <TextView
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/keyboard_key_style"
        android:text="@string/uhButtonLabel" />

    <TextView
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/keyboard_key_style"
        android:text="ඉ" />

    <TextView
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/keyboard_key_style"
        android:text="බ" />
</LinearLayout>